more clarity on test-id stuff

--- a/tutorial/12. U is for Update.md
+++ b/tutorial/12. U is for Update.md
@@ -231,3 +231,13 @@ Now, to make the test pass, we update the partial template. The checkbox should 
 If you get weird template rendering errors it can be because of an autoformatter messing up your template tags. 
 
 Run your tests again, they should pass!
+
+## Pay close attention 
+
+You will need to use test ids in the next section. You'll need to understand them really well. This is critical information.
+
+Spend some time experimenting with your code. What happens if you use an `id` instead of a `data-testid`? What if you try to refer to a `data-testid` that doesn't exist? Can you use playwright to fetch an item by `id`? Or only `data-testid`? 
+
+What kinds of errors do your tests give you when you mess around? Pay attention to the error messages.
+
+Spend some time poking around and experimenting. 
